# tokenme

./: .gitignore  BENCHMARK_RESULTS.md  LICENSE  LINKEDIN_POST.md  README.md  STRATEGY.md  benchmark_results.csv  pyproject.toml
benchmark/: REPRODUCE.md  scenario1_kept.py  scenario1_raw.py  scenario2_kept.txt  scenario2_raw.txt  scenario3_kept_tooloutput.txt  scenario3_raw_tooloutput.txt
benchmark/bench_inputs/: cargo_test_output.txt  diff_after.txt  diff_before.txt  git_diff_full.txt  verbose_prose.txt
benchmark/bench_outputs/: caveman_diff.txt  caveman_prose.txt  caveman_test.txt  ponytail_diff.txt  ponytail_prose.txt  ponytail_test.txt  rtk_diff.txt  rtk_prose.txt  tokenme_diff.txt  tokenme_prose.txt  tokenme_test.txt
docs/: decision-guide.md  measurement.md  quality-guard.md
examples/: before-after.md
hooks/: hook_record.py  hook_response.py  hooks.json
skills/tokenme/: SKILL.md
tests/: test_tokenme.py
tokenme/: __init__.py  cli.py  estimate.py  layer4.py  quality.py  selfcheck.py  tracker.py
